# airgradient

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
docs/: design.md
src/: config.rs  main.rs  models.rs
src/sensor/: client.rs  poller.rs
src/storage/: grapher.rs  mod.rs  rrd.rs
src/web/: api.rs  mod.rs  pages.rs
static/css/: style.css
static/js/: explorer.js
templates/: explorer.html  index.html  layout.html  sensor_detail.html  settings.html
templates/partials/: sensor_cards.html
