[package]
name = "airgradient"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "airgradient"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rrd = "0.3.0-beta.1"
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
rust-embed = { version = "8", features = ["axum"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
mime_guess = "2"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
tempfile = "3"
